fix error handling in searchform

--- a/src/assets/styles/layout/_searchForm.scss
+++ b/src/assets/styles/layout/_searchForm.scss
@@ -1,3 +1,12 @@
 .search-form-container {
     margin: 50px 0px;
 }
+
+.error-msg {
+    color: red;
+    font-weight: 700;
+}
+
+.loading-text {
+    color: var(--green);
+}
