fix searchform and input handler

--- a/src/assets/styles/layout/_customInput.scss
+++ b/src/assets/styles/layout/_customInput.scss
@@ -23,6 +23,11 @@
         }
     }
 
+    .input-button {
+        background-color: none;
+        border: none;
+    }
+
     .search-icon {
         position: absolute;
         top: 50%;
